--- a/connectXvit/connectXvit/Base.lproj/Main.storyboard
+++ b/connectXvit/connectXvit/Base.lproj/Main.storyboard
@@ -810,6 +810,9 @@
                                     <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                     <font key="font" metaFont="system"/>
                                 </buttonCell>
+                                <connections>
+                                    <action selector="signUpDidPress:" target="clV-8w-PKy" id="Nbe-We-eWb"/>
+                                </connections>
                             </button>
                             <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="6pB-O2-MOo">
                                 <rect key="frame" x="18" y="20" width="91" height="17"/>
